--- a/Frontend/src/Pages/Quizform.css
+++ b/Frontend/src/Pages/Quizform.css
@@ -15,6 +15,10 @@ body {
     border-radius: 8px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   }
+
+  h1{
+    text-align: center;
+  }
   
   /* Section headers */
   h2 {
